--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.509.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -29,8 +30,8 @@
     "wouter": "^3.7.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
